# pymail-zh

./: .gitignore  LICENSE  README.md  pyproject.toml
pymail_zh/: mail_client.py  mail_utils.py
