[tool.poetry]
name = "pymail-zh"
version = "0.9.1"
description = "imapclient wrapper"
authors = ["zbjdonald <zbjdonald@qq.com>"]

[tool.poetry.dependencies]
python = "^3.4"
requests = "^2.0.0"
imapclient = "^2.0.0"
simplejson = "*"
beautifulsoup4 = "^4.2.0"
optionaldict = "*"
tqdm = "*"
lxml = { version = "*", optional = true }
html5lib = { version = "*", optional = true }

[tool.poetry.extras]
lxml = ["lxml"]
html5lib = ["html5lib"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
